# AstroPhotography

./: .gitignore  README  README.md  TODO
cli/: AUTHORS  ChangeLog  Makefile.am  README  astrocli.cpp  cli.cpp  cli.h  configure.ac  grammar.y  testscript  tokens.l  variables.cpp  variables.h
control/: .gitignore  AUTHORS  ChangeLog  ImageCalibration.cpp  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  build  buildtime  config.status  configure  configure.ac  configureit  environment  libtool
control/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
control/cli/: Images.cpp  Images.h  Makefile.am  README  astro.cpp  cameracommand.h  ccdcommand.h  cli.cpp  getimage.astro  guidecli.h  guidercalibration.astro  guidercommand.cpp  guidercommand.h  guiderfactorycommand.cpp  guiderinfo.astro  guiderportcommand.cpp  guiderportcommand.h  imagecommand.h  listcommand.cpp  locatorcommand.cpp  simfocus.astro  submit.astro  sxguiderport.astro  taskqueuecommand.cpp  testscript  tokens.l
control/client/: Makefile.am  astroclient.cpp  astroinfo.cpp  getimage.cpp
control/corba/: Makefile.am  README
control/doc/: Doxyfile  Makefile  Makefile.am  Makefile.in
control/documents/: Configuration
control/drivers/: Makefile  Makefile.am  Makefile.in
control/guider/: Cameras.cpp  Cameras.h  Ccds.cpp  DeviceMap.h  Filterwheels.h  Focusers.cpp  Focusers.h  Guiderports.cpp  Guiderports.h  Guiders.cpp  Guiders.h  Images.cpp  Images.h  Makefile.am  ObjWrapper.h  Output.cpp  Output.h  VarWrapper.h  cameracommand.cpp  ccdcommand.cpp  ccdcommand.h  cli.cpp  cli.h  clicommand.cpp  clicommand.h  coolercommand.cpp  coolercommand.h  exposurecommand.cpp  exposurecommand.h  filterwheelcommand.cpp  filterwheelcommand.h  focusercommand.cpp  grammar.y  guide.cpp  guidecli.cpp  guidecli.h  guidercommand.cpp  guidercommand.h  guiderfactorycommand.cpp  guiderfactorycommand.h  (+15 more)
control/ice/: Makefile.am  README
control/idl/: Conversions.cpp  Makefile.am  NameService.cpp  NameService.h  OrbSingleton.cpp  astro.idl  camera.idl  device.idl  exceptions.idl  guider.idl  image.idl  module.idl  tasks.idl  types.idl
control/include/: AOCalibrationProcess.h  AstroAdapter.h  AstroBackground.h  AstroCalibration.h  AstroCallback.h  AstroCamera.h  AstroCatalog.h  AstroChart.h  AstroConfig.h  AstroConvolve.h  AstroCoordinates.h  AstroDebug.h  AstroDemosaic.h  AstroDemosaicAdapter.h  AstroDevaccess.h  AstroDevice.h  AstroDiscovery.h  AstroDisplay.h  AstroEvent.h  AstroExceptions.h  AstroFWHM.h  AstroFilter.h  AstroFilterfunc.h  AstroFocus.h  AstroFormat.h  AstroGateway.h  AstroGroup.h  AstroGuiding.h  AstroHistogram.h  AstroHorizon.h  AstroIO.h  AstroImage.h  AstroImageops.h  AstroImager.h  AstroInterpolation.h  AstroLoader.h  AstroLocator.h  AstroLoop.h  AstroMask.h  AstroMosaic.h  (+99 more)
control/lib/: Adapters.cpp  AdaptiveOptics.cpp  Analyzer.cpp  AttributeValuePairs.cpp  AvahiBase.cpp  AvahiDiscovery.cpp  AvahiPublisher.cpp  AvahiResolver.cpp  AvahiServiceSubset.cpp  AvahiThread.cpp  BSC.cpp  Backend.cpp  Background.cpp  BasicGuiderport.cpp  Binning.cpp  BonjourDiscovery.cpp  BonjourPublisher.cpp  BonjourResolver.cpp  Calibration.cpp  CalibrationFactory.cpp  CalibrationImageStep.cpp  CalibrationPersistence.cpp  CalibrationProcess.cpp  CalibrationProcessorStep.cpp  CalibrationStore.cpp  Camera.cpp  CancellableWork.cpp  Catalog.cpp  CatalogBackend.cpp  Ccd.cpp  Chart.cpp  Clamper.cpp  Configuration.cpp  ConnectedComponent.cpp  Conversions.cpp  Cooler.cpp  Coordinates.cpp  CorbaExceptionReporter.cpp  Corrector.cpp  DarkCorrector.cpp  (+203 more)
control/man/: Makefile.am  astroconfig.1  astrod.1  astroinstrument.1  calibrate.1  clamp.1  dark.1  flat.1  getimages.1  guider.1  imageinfo.1  imageloop.1  imagerepo.1  logscale.1
control/root/: README
control/scripts/: Makefile.am  README  README.database  README.images  README.repo  README.starcatalogs  astrofb  database.sql.in  getent  sky.png.php.in  snowstar.service.in  startastro.in  status.php.in
control/server/: CalibrationPointCallback.cpp  CalibrationPointCallback.h  Camera_impl.cpp  Camera_impl.h  Ccd_impl.cpp  Ccd_impl.h  Cooler_impl.cpp  Cooler_impl.h  DeviceLocator_impl.cpp  DeviceLocator_impl.h  DriverModule.cpp  DriverModule.h  DriverModuleActivator_impl.h  DriverModule_impl.cpp  DriverModule_impl.h  FilterWheel_impl.cpp  FilterWheel_impl.h  Focuser_impl.cpp  Focuser_impl.h  GuiderFactory_impl.cpp  GuiderFactory_impl.h  GuiderImageCallback.cpp  GuiderImageCallback.h  GuiderPort_impl.cpp  GuiderPort_impl.h  GuiderStateMachine.cpp  GuiderStateMachine.h  Guider_calibration.cpp  Guider_images.cpp  Guider_impl.cpp  Guider_impl.h  Guider_tracking.cpp  ImageActivator_impl.cpp  ImageActivator_impl.h  ImageDirectory.cpp  ImageDirectory.h  ImageObjectDirectory.h  Image_impl.cpp  Image_impl.h  Images_impl.cpp  (+22 more)
control/test/: Makefile  Makefile.am  Makefile.in  Mock1Test.cpp  RepositoryTest.cpp  loadtest.cpp  postinstall_tests.cpp  tests.cpp
control/tools/: Makefile.am  README  astroconfig.cpp  astroinstrument.cpp  astromount.cpp  astroproject.cpp  background.cpp  buildcatalog.cpp  calibrate.cpp  clamp.cpp  convertimage.sh  convolve.cpp  crop.cpp  dark.cpp  devicemapper.cpp  fitsheader.cpp  flat.cpp  focus.cpp  focusing.cpp  focustest.cpp  gammacorrect.cpp  getimages.cpp  guider.cpp  guiderport.cpp  imageinfo.cpp  imageloop.cpp  imagerepo.cpp  limit.cpp  logscale.cpp  makedark.cpp  makeflat.cpp  makemovie.sh  radon.cpp  rescale.cpp  sdiscover.cpp  spublish.cpp  stack.cpp  starcatalog.cpp  transform.cpp
control/web/: README  database.sql  status.php  update.php
gui/: ChangeLog  ExposureWorker.cpp  LogSpinBox.cpp  Makefile.am  README  TODO  astrogui.pro  capture.cpp  capturewindow.cpp  capturewindow.h  capturewindow.ui  cleanmakefiles  configure.ac  configureit  environment  exposurewidget.cpp  exposurewidget.h  exposurewidget.ui  qtcleanup
gui/common/: config.h.in
gui/fitsviewer/: fitsviewer.cpp  fitsviewer.pro  fitsviewerwindow.cpp  fitsviewerwindow.h  fitsviewerwindow.ui  histogramwidget.cpp
gui/snowgui/: build.in  snowgui.pro  (+2 more)
(+2567 files in other folders)
